plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'eclipse'
    id 'idea'
}
// test commit

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Minecraft 1.21.1 uses Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty('java.version')}, JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}), Arch: ${System.getProperty('os.arch')}"

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir 'src/generated/resources'

    // Optional: keep dev-only files out of the final jar.
    exclude '**/*.bbmodel'
    exclude 'src/generated/**/.cache'
}

repositories {
    mavenCentral()

    maven {
        name = 'CurseMaven'
        url = 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }

    flatDir {
        dir 'libs'
    }
}
neoForge {
    version = project.neo_version

    parchment {
        minecraftVersion = project.parchment_minecraft_version
        mappingsVersion = project.parchment_mappings_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            gameDirectory = project.file('run-data')

            programArguments.addAll(
                    '--mod', project.mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
            )
        }

        configureEach {
            gameDirectory = project.file('run')

            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'forge.logging.console.level', 'debug'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

// Used for optional runtime-only mod dependencies in dev.
// Prefer localRuntime instead of runtimeOnly for mods you do not want published as required dependencies.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    /*
     * NeoForge itself is configured by the neoForge { version = ... } block.
     * Do not add:
     * minecraft "net.minecraftforge:forge:..."
     */

    /*
     * MixinExtras:
     * NeoForge 20.2.84+ already includes MixinExtras.
     * Keep this only if you specifically want to bundle/control your own version.
     */
    implementation(jarJar("io.github.llamalad7:mixinextras-neoforge:${mixinextras_version}")) {
        version {
            strictly "[${mixinextras_version},)"
            prefer mixinextras_version
        }
    }

    // Optional examples, update CurseMaven IDs/versions for 1.21.1 NeoForge-compatible jars:
    // compileOnly "curse.maven:jei-238222:<file_id>"
    // localRuntime "curse.maven:jei-238222:<file_id>"

    // Local jar example:
    // implementation "blank:coolmod-${minecraft_version}:${coolmod_version}"
}

// Expands properties in resource files.
// IMPORTANT: for NeoForge 1.21.1 this should be META-INF/neoforge.mods.toml, not META-INF/mods.toml.
tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,

            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]

    inputs.properties replaceProperties

    filesMatching([
            'META-INF/neoforge.mods.toml',
            'pack.mcmeta'
    ]) {
        expand replaceProperties// + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.version,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }

    repositories {
        maven {
            url = "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}